--- a/src/foursquair.mxml
+++ b/src/foursquair.mxml
@@ -13,18 +13,30 @@
             [Bindable] public var checkins:ArrayCollection;
             [Bindable] public var actor:UserVO;
             
+            import flash.filesystem.*; 
+            public var file:File; 
+            
             private function init():void{
-                foursquare.authExchange('user', 'pass', function():void{
-                    foursquare.getUserDetails(0, function(u:UserVO):void{
-                        actor = u;
-                    }, null, true, false);
-                    foursquare.getCheckins(
-                        function(c:Array){
-                            checkins = new ArrayCollection(c);
-                        }
-                    );
-                });
+                file = File.applicationStorageDirectory; 
+                file = file.resolvePath("Preferences/data_super_test_version.txt"); 
+                if(file.exists) { 
+                    var stream:FileStream = new FileStream(); 
+	                stream.open(file, FileMode.READ); 
+	                var filedata:String = stream.readUTFBytes(stream.bytesAvailable); 
+	                stream.close();
+	                var xml:XML = new XML(filedata);
+	                foursquare.oauth_token = xml.descendants('oauth_token').toString();
+                    foursquare.oauth_token_secret = xml.descendants('oauth_token_secret').toString();
+	                bootstrap();
+	                
+                } else { 
+                    firstRun(); 
+                } 
             }
+            
+            private function firstRun():void { 
+                // do stuff..
+            } 
             
             public function showFlashMessage(msg:String):void{
                 
@@ -109,33 +121,93 @@
                 );
                 */
             }
-           
+            
+            public function bootstrap():void{
+            	splash.visible = false;
+                main.visible = true;
+                       
+            	foursquare.getUserDetails(
+            	    0, 
+            	    function(u:UserVO):void{
+	                    actor = u;
+	                    foursquare.actor = u;
+	                    foursquare.getHistory(
+	                        20,
+	                        function(c:Array):void{
+	                            checkins = new ArrayCollection(c);
+	                        }
+	                    );
+	                }, 
+	                null, 
+	                true, 
+	                false
+                );
+            }
+            
+            public function handleLogin():void{
+            	foursquare.authExchange(
+            	   username.text, 
+            	   password.text, 
+            	   function():void{
+            	       //Store these in Sqlite?
+            	       var c:XML = new XML('<foursquare><oauth_token>'+foursquare.oauth_token+'</oauth_token><oauth_token_secret>'+foursquare.oauth_token_secret+'</oauth_token_secret></foursquare>');
+            	       var contents:String = c.toXMLString();
+            	       
+            	       var stream:FileStream = new FileStream(); 
+		               stream.open(file, FileMode.WRITE);
+		               stream.writeUTFBytes(contents); 
+		               stream.close(); 
+            	       //foursquare.oauth_token
+            	       //foursquare.oauth_token_secret
+            	       bootstrap();
+            	   }, 
+            	   function():void{
+            	   	   
+            	   }
+            	);
+            }
+            
         ]]>
     </mx:Script>
-    <mx:HBox width="100%" height="100%">
-        <mx:VBox width="95" height="100%" horizontalAlign="center">
-            <mx:Image source="{actor.photo}" height="75" width="75"/>
-            <mx:TabBar dataProvider="viewstack1" width="100%" paddingLeft="0" direction="vertical" itemClick="handleTabBarItemClick(event);"></mx:TabBar>
-        </mx:VBox>
+    <mx:VBox id="splash">
+        <mx:Form defaultButton="{loginSubmit}">
+        <mx:Label text="Username or phone #" />
+        <mx:TextInput id="username" />
         
+        <mx:Label text="Password" />
+        <mx:TextInput id="password"  displayAsPassword="true"/>
+        
+        <mx:Button label="Sign in" id="loginSubmit" click="handleLogin();"/>
+        </mx:Form>
+    </mx:VBox>
+    
+    <mx:HBox width="100%" height="100%" id="main" visible="false">
+        <mx:VBox width="80" height="100%" horizontalAlign="center" id="sidebar" backgroundColor="#242424">
+            	<mx:Image source="{actor.photo}" height="75" width="75"/>
+            	<mx:TabBar dataProvider="viewstack1" width="100%" paddingLeft="0" direction="vertical" itemClick="handleTabBarItemClick(event);"></mx:TabBar>
+        </mx:VBox>
         <mx:ViewStack id="viewstack1" width="100%" height="100%">
-            <mx:Canvas label="Friends" width="100%" height="100%">
+            <mx:Canvas label="F" width="100%" height="100%">
                 <mx:VBox width="100%" height="100%">
-                    <mx:Label text="What your friends are up to" />
-                    <mx:List dataProvider="{checkins}" width="100%" height="100%"><mx:itemRenderer>
+                    <mx:Label text="Friends"  fontSize="11"/>
+                    <mx:List dataProvider="{checkins}" width="100%" height="100%" backgroundColor="#D2D2D2" themeColor="#FFFFFF"><mx:itemRenderer>
                         <mx:Component>
-                            <mx:HBox width="100%">
+                            <mx:HBox width="100%" horizontalScrollPolicy="off" verticalScrollPolicy="off">
                                 <mx:Image source="{data.user.photo}" height="75" width="75" />
-                                <mx:VBox width="100%">
-                                    <mx:Label text="{data.display}" />
-                                    <mx:Label text="{data.shout}" />
+                                <mx:VBox verticalGap="0" width="100%" borderStyle="solid" cornerRadius="3" horizontalScrollPolicy="off" verticalScrollPolicy="off" backgroundColor="#FFFFFF" paddingLeft="5" paddingRight="5" paddingBottom="5" paddingTop="5">
+                                    <mx:HBox width="100%">
+                                    	<mx:Text text="{data.user.firstname} {data.user.lastname.substr(0,1)}." width="100%" fontSize="11" fontWeight="bold" />
+                                    	<mx:Text text="{data.created_in_words}" fontSize="9" />
+                                    </mx:HBox>
+                                    <mx:Text text="@ {data.venue.name}" width="100%" fontWeight="bold" fontSize="10" />
+                                    <mx:Text text="&quot;{data.shout}&quot;" includeInLayout="{data.shout!=''}" visible="{data.shout!=''}" width="100%" fontSize="10" />
                                 </mx:VBox>
                             </mx:HBox>
                         </mx:Component>
                     </mx:itemRenderer></mx:List>
                 </mx:VBox>
             </mx:Canvas>
-            <mx:Canvas label="Badges" width="100%" height="100%">
+            <mx:Canvas label="B" width="100%" height="100%">
                 <mx:VBox width="100%" height="100%">
                     <mx:Label text="Your badges" />
                     <mx:List dataProvider="{actor.badges}" width="100%" height="100%"><mx:itemRenderer>
@@ -143,8 +215,8 @@
                             <mx:HBox width="100%" horizontalScrollPolicy="off" verticalScrollPolicy="off">
                                 <mx:Image source="{data.icon}" height="57" width="57" />
                                 <mx:VBox width="100%" horizontalScrollPolicy="off" verticalScrollPolicy="off">
-                                    <mx:Label text="{data.name}" />
-                                    <mx:Text text="{data.description}" height="100%"></mx:Text>
+                                    <mx:Text text="{data.name}" width="100%" />
+                                    <mx:Text text="{data.description}" width="100%"></mx:Text>
                                 </mx:VBox>
                             </mx:HBox>
                         </mx:Component>
