--- a/src/foursquair.mxml
+++ b/src/foursquair.mxml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:WindowedApplication xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="350" initialize="init();">
+<mx:WindowedApplication xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="100%" initialize="init();" backgroundColor="#FFFFFF">
+    <mx:states>
+        <mx:State name="Login">
+            <mx:SetProperty target="{main}" name="visible" value="false"/>
+            <mx:SetProperty target="{login}" name="visible" value="true"/>
+        </mx:State>
+        <mx:State name="Splash">
+            <mx:SetProperty target="{main}" name="visible" value="false"/>
+            <mx:SetProperty target="{login}" name="visible" value="false"/>
+            <mx:AddChild position="lastChild">
+                <mx:Canvas id="splash" width="100%" height="100%">
+                	<mx:Image source="@Embed(source='assets/images/foursquare_splash.png')" horizontalCenter="0" verticalCenter="0"/>
+                </mx:Canvas>
+            </mx:AddChild>
+        </mx:State>
+    </mx:states>
     <mx:Script>
         <![CDATA[
             import mx.controls.Alert;
@@ -8,20 +23,30 @@
             import mx.utils.ObjectUtil;
             import mx.effects.Blur;
             import mx.effects.Move;
-
+            import mx.core.Application;
+            import flash.utils.Timer;
+            import flash.events.TimerEvent;
+            
             public var foursquare:FoursqaureService = new FoursqaureService('266d5934f6cb223fcd5ffc75eeb0a99404acf504c', '6265da6ce9bd8cb2c69632ae51836327');
             [Bindable] public var checkins:ArrayCollection;
             [Bindable] public var actor:UserVO;
             
             import flash.filesystem.*; 
-            public var file:File; 
+            public var oauthFile:File; 
+            
+            private var updateCheckTimer:Timer;
+            
+            private function getApp():foursquair{
+            	return mx.core.Application.application as foursquair;
+            }
             
             private function init():void{
-                file = File.applicationStorageDirectory; 
-                file = file.resolvePath("Preferences/data_super_test_version.txt"); 
-                if(file.exists) { 
+            	getApp().currentState = 'Splash';
+                oauthFile = File.applicationStorageDirectory; 
+                oauthFile = oauthFile.resolvePath("Preferences/oauth.txt");
+                if(oauthFile.exists) { 
                     var stream:FileStream = new FileStream(); 
-	                stream.open(file, FileMode.READ); 
+	                stream.open(oauthFile, FileMode.READ); 
 	                var filedata:String = stream.readUTFBytes(stream.bytesAvailable); 
 	                stream.close();
 	                var xml:XML = new XML(filedata);
@@ -30,31 +55,40 @@
 	                bootstrap();
 	                
                 } else { 
-                    firstRun(); 
+                    firstRun();
                 } 
             }
             
             private function firstRun():void { 
                 // do stuff..
+                getApp().currentState = 'Login';
             } 
             
             public function showFlashMessage(msg:String):void{
                 
             }
             
-            public function checkForUpdates():void{
+            public function checkForUpdates(...rest):void{
+            	trace('Check updates');
+                getApp().status = 'Checking for updates...';
                 foursquare.getCheckins(
-                    function(c:Array){
+                    function(c:Array):void{
                         var lastKnown:CheckinVO = checkins.getItemAt(0) as CheckinVO;
                         if(lastKnown.id < c[0].id){
-                            
+                            var toAdd:Array = new Array();
+                            c.reverse().forEach(function(el:Object, index:int, arr:Array){
+                            	if(el.id > lastKnown.id){
+                            		toAdd.push(el);
+                            	}
+                            });
+                            checkins.addAll(new ArrayCollection(toAdd));
+                            getApp().status = toAdd.length+' updates added!';
+                        }
+                        else{
+                        	getApp().status = 'No new updates :(';
                         }
                     }
                 );
-            }
-            
-            private function handleTabBarItemClick(e:*):Boolean{
-                return false;
             }
             
             public function transition(from:Canvas,to:Canvas,direction:String):void{
@@ -123,20 +157,30 @@
             }
             
             public function bootstrap():void{
-            	splash.visible = false;
-                main.visible = true;
-                       
+            	updateCheckTimer = new Timer((60000*5));
+            	updateCheckTimer.addEventListener(TimerEvent.TIMER, checkForUpdates);
+            	updateCheckTimer.start();
+            	
+            	getApp().status = 'Loading up.... Please wait';
             	foursquare.getUserDetails(
             	    0, 
             	    function(u:UserVO):void{
 	                    actor = u;
 	                    foursquare.actor = u;
+	                    /*
 	                    foursquare.getHistory(
 	                        20,
 	                        function(c:Array):void{
 	                            checkins = new ArrayCollection(c);
+	                            getApp().currentState = '';
 	                        }
 	                    );
+	                    */
+	                    foursquare.getCheckins(function(c:Array):void{
+	                    	checkins = new ArrayCollection(c);
+                            getApp().currentState = '';
+                            getApp().status = '';
+	                    });
 	                }, 
 	                null, 
 	                true, 
@@ -145,52 +189,57 @@
             }
             
             public function handleLogin():void{
+            	getApp().status = 'Loggin in...';
             	foursquare.authExchange(
             	   username.text, 
             	   password.text, 
             	   function():void{
-            	       //Store these in Sqlite?
-            	       var c:XML = new XML('<foursquare><oauth_token>'+foursquare.oauth_token+'</oauth_token><oauth_token_secret>'+foursquare.oauth_token_secret+'</oauth_token_secret></foursquare>');
-            	       var contents:String = c.toXMLString();
-            	       
-            	       var stream:FileStream = new FileStream(); 
-		               stream.open(file, FileMode.WRITE);
-		               stream.writeUTFBytes(contents); 
-		               stream.close(); 
-            	       //foursquare.oauth_token
-            	       //foursquare.oauth_token_secret
+            	       if(rememberMe.selected){
+	            	       var c:XML = new XML('<foursquare><oauth_token>'+foursquare.oauth_token+'</oauth_token><oauth_token_secret>'+foursquare.oauth_token_secret+'</oauth_token_secret></foursquare>');
+	            	       var contents:String = c.toXMLString();
+	            	       
+	            	       var stream:FileStream = new FileStream(); 
+			               stream.open(oauthFile, FileMode.WRITE);
+			               stream.writeUTFBytes(contents); 
+			               stream.close(); 
+            	       }
+            	       getApp().status = '';
             	       bootstrap();
             	   }, 
             	   function():void{
-            	   	   
+            	   	   getApp().status = 'Error trying to do auth exchange';
             	   }
             	);
             }
             
         ]]>
     </mx:Script>
-    <mx:VBox id="splash">
-        <mx:Form defaultButton="{loginSubmit}">
+    <mx:VBox id="login" visible="false" horizontalCenter="0" verticalCenter="0">
+        <mx:Image source="@Embed(source='assets/images/foursquare_logo_270.png')"/>
+        <mx:Form defaultButton="{loginSubmit}" id="form1" width="100%">
         <mx:Label text="Username or phone #" />
         <mx:TextInput id="username" />
         
         <mx:Label text="Password" />
         <mx:TextInput id="password"  displayAsPassword="true"/>
-        
+        <mx:CheckBox id="rememberMe" selected="true" label="Remember me"/>
         <mx:Button label="Sign in" id="loginSubmit" click="handleLogin();"/>
         </mx:Form>
     </mx:VBox>
     
-    <mx:HBox width="100%" height="100%" id="main" visible="false">
-        <mx:VBox width="80" height="100%" horizontalAlign="center" id="sidebar" backgroundColor="#242424">
-            	<mx:Image source="{actor.photo}" height="75" width="75"/>
-            	<mx:TabBar dataProvider="viewstack1" width="100%" paddingLeft="0" direction="vertical" itemClick="handleTabBarItemClick(event);"></mx:TabBar>
+    <mx:HBox width="100%" height="100%" id="main">
+        <mx:VBox width="60" height="100%" horizontalAlign="center" id="sidebar" backgroundColor="#458CE1">
+            	<mx:Image source="{actor.photo}" height="50" width="50"/>
+            	<mx:VBox>
+            		<mx:Image source="@Embed(source='assets/images/foursquare_tv_icon.png')" click="viewstack1.selectedIndex=0;" />
+            		<mx:Image source="@Embed(source='assets/images/foursquare_case_icon.png')" click="viewstack1.selectedIndex=1" />
+            	</mx:VBox>
         </mx:VBox>
         <mx:ViewStack id="viewstack1" width="100%" height="100%">
             <mx:Canvas label="F" width="100%" height="100%">
                 <mx:VBox width="100%" height="100%">
                     <mx:Label text="Friends"  fontSize="11"/>
-                    <mx:List dataProvider="{checkins}" width="100%" height="100%" backgroundColor="#D2D2D2" themeColor="#FFFFFF"><mx:itemRenderer>
+                    <mx:List dataProvider="{checkins}" width="100%" height="100%" themeColor="#FFFFFF" borderStyle="none"><mx:itemRenderer>
                         <mx:Component>
                             <mx:HBox width="100%" horizontalScrollPolicy="off" verticalScrollPolicy="off">
                                 <mx:Image source="{data.user.photo}" height="75" width="75" />
