--- a/src/foursquair.mxml
+++ b/src/foursquair.mxml
@@ -36,10 +36,13 @@
     </mx:Style>
     <mx:Script>
         <![CDATA[
+        	import air.update.events.UpdateEvent;
         	import mx.controls.Image;
         	import mx.events.CollectionEvent;
             import mx.controls.Alert;
             import com.foursquare.api.*;
+            import com.foursquare.util.XMLUtil;
+            
             import mx.collections.ArrayCollection;
             import mx.utils.ObjectUtil;
             import mx.effects.Blur;
@@ -73,12 +76,19 @@
             private const iconURL: String = "assets/images/notification_dude.png";
             private var bmp: Bitmap = null;
             
+            import air.update.ApplicationUpdaterUI;
+            var appUpdater:ApplicationUpdaterUI = new ApplicationUpdaterUI();
+            
             private function getApp():foursquair{
             	return mx.core.Application.application as foursquair;
             }
             
             private function init():void{
             	getApp().currentState = 'Splash';
+            	appUpdater.configurationFile = new File("app:/updateConfig.xml"); 
+                appUpdater.initialize();
+                trace(appUpdater.currentVersion);
+                
             	var i:Image = new Image;
             	i.addEventListener(Event.COMPLETE, function(event:Event):void{
             		bmp = Bitmap(Image(event.target).content);
@@ -103,9 +113,11 @@
 	                stream.open(oauthFile, FileMode.READ); 
 	                var filedata:String = stream.readUTFBytes(stream.bytesAvailable); 
 	                stream.close();
-	                var xml:XML = new XML(filedata);
-	                foursquare.oauth_token = xml.descendants('oauth_token').toString();
-                    foursquare.oauth_token_secret = xml.descendants('oauth_token_secret').toString();
+	                
+	                var d:Object = com.foursquare.util.XMLUtil.XMLToObject(filedata);
+	                foursquare.oauth_token = d.foursquare.oauth_token;
+                    foursquare.oauth_token_secret = d.foursquare.oauth_token_secret;
+                    
 	                bootstrap();
 	                
                 } else { 
@@ -209,7 +221,6 @@
 	                }
                 }
             }
-            import com.adobe.serialization.json.*;
             
             private function showIndicator(indicator:SWFLoader):void{
             	indicator.visible = true;
@@ -254,12 +265,9 @@
                             hideIndicator(friendsLoadingIndicator);
                 
 	                    });
-	                    try{
-	                    foursquare.getVenues(actor.city.geolat, actor.city.geolong);
-	                    }
-	                    catch(e:Error){
-	                    	mx.controls.Alert.show(e.message, 'Error getting venues');
-	                    }
+	                    foursquare.getVenues(actor.city.geolat, actor.city.geolong, 25, 25, '', function(v:Array):void{
+	                       venues = new ArrayCollection(v);
+	                    });
 	                }, 
 	                null, 
 	                true, 
@@ -276,8 +284,13 @@
             	   password.text, 
             	   function():void{
             	       if(rememberMe.selected){
-	            	       var c:XML = new XML('<foursquare><oauth_token>'+foursquare.oauth_token+'</oauth_token><oauth_token_secret>'+foursquare.oauth_token_secret+'</oauth_token_secret></foursquare>');
-	            	       var contents:String = c.toXMLString();
+            	       	   var d:Object = new Object();
+            	       	   d.oauth_token = foursquare.oauth_token;
+            	       	   d.oauth_token_secret = foursquare.oauth_token_secret;
+            	       	   var contents:String = com.foursquare.util.XMLUtil.objectToXML(d).toXMLString();
+            	       	   
+	            	       //var c:XML = new XML('<foursquare><oauth_token>'+foursquare.oauth_token+'</oauth_token><oauth_token_secret>'+foursquare.oauth_token_secret+'</oauth_token_secret></foursquare>');
+	            	       //var contents:String = c.toXMLString();
 	            	       
 	            	       var stream:FileStream = new FileStream(); 
 			               stream.open(oauthFile, FileMode.WRITE);
@@ -316,7 +329,7 @@
             
             public function handleVenueSearch():void{
             	showIndicator(searchLoadingIndicator);
-            	
+            	venues.removeAll();
                 getApp().status = 'Searching...';
                 venueSearchSubmit.enabled = false;
                 try{
@@ -370,10 +383,6 @@
                        <mx:Button label="Badges" click="viewstack1.selectedIndex=1;"/>
                        <mx:Button label="Places" click="viewstack1.selectedIndex=2;"/>
             	   </mx:HBox>
-            	<!--
-            		<mx:Image source="@Embed(source='assets/images/foursquare_tv_icon.png')" click="viewstack1.selectedIndex=0;" />
-            		<mx:Image source="@Embed(source='assets/images/foursquare_case_icon.png')" click="viewstack1.selectedIndex=1" />
-            		-->
             	</mx:HBox>
         </mx:HBox>
         <mx:ViewStack id="viewstack1" width="100%" height="100%" creationPolicy="all">
@@ -417,7 +426,7 @@
                 </mx:VBox>
             </mx:Canvas>
             <mx:Canvas label="V" width="100%" height="100%">
-                <mx:VBox width="100%" height="100%">
+                <mx:VBox width="100%" height="100%" verticalGap="1">
                     <mx:HBox width="100%">
                     	<mx:Label id="venuesTitle" text="Popular nearby" width="100%" />
                     	<mx:Form paddingTop="0" paddingBottom="0" paddingLeft="0" paddingRight="10" defaultButton="{venueSearchSubmit}">
@@ -428,52 +437,42 @@
                             </mx:HBox>
                     	</mx:Form>
                     </mx:HBox>
+                    <mx:HRule width="100%" />
                     <!--
                     @todo (lucas) It's really important to show "verified" places here right? ie places friends have been but you havent
                     -->
                     <mx:List dataProvider="{venues}" width="100%" height="100%" borderStyle="none" themeColor="#FFFFFF"><mx:itemRenderer>
                         <mx:Component>
-                            <mx:HBox width="100%" horizontalScrollPolicy="off" verticalScrollPolicy="off">
+                            <mx:VBox width="100%" verticalGap="0" horizontalScrollPolicy="off" verticalScrollPolicy="off">
                                 <mx:Script>
                                 	<![CDATA[
                                 		import mx.core.Application;
                                 		import mx.controls.TextInput;
                                 	]]>
                                 </mx:Script>
-                                <mx:VBox width="100%">
-                                    <mx:HBox width="100%">
-                                	    <mx:Text text="{data.name}" width="100%" fontStyle="bold"></mx:Text>
-                                        <mx:LinkButton label="details" click="navigateToURL(new URLRequest('http://foursquare.com/venue/'+data.id));" />
+                                <mx:HBox width="100%" horizontalGap="1">
+                            	    <mx:Text text="{data.name}" fontWeight="bold" fontSize="11"></mx:Text> 
+                            	    <mx:Text text="{data.address}" />
+                            	    <mx:Text text="{data.crossstreet}" visible="{data.crossstreet!=null}" includeInLayout="{data.crossstreet!=null}" />
+                            	    <mx:HBox horizontalAlign="right" width="100%" horizontalGap="2">
+                            	        <mx:LinkButton label="details" click="navigateToURL(new URLRequest('http://foursquare.com/venue/'+data.id));" />
                                         <mx:LinkButton label="shout it" click="var shoutText:TextInput = mx.core.Application.application.shoutText; shoutText.text='Anybody want to go to '+data.name+'?';" />
                                     </mx:HBox>
-                                    <mx:Text width="100%" text="{data.address}" />
-                                    <mx:Text width="100%" text="{data.crossstreet}" />
-                                    <mx:Text width="100%" text="Phone: {data.phone}" />
-                                </mx:VBox>
-                            </mx:HBox>
+                                </mx:HBox>
+                                <mx:HRule width="100%" />
+                            </mx:VBox>
                         </mx:Component>
                     </mx:itemRenderer></mx:List>
                 </mx:VBox>
             </mx:Canvas>
         </mx:ViewStack>
-        
-        <!--
-        <mx:HBox width="100%" horizontalGap="0">
-            <mx:Button label="Shout"  width="100%"/>
-            <mx:Button label="Add Friends"  width="100%"/>
-            <mx:Button label="Add Venue"  width="100%"/>
-            <mx:Button label="Help"  width="100%"/>
-        </mx:HBox>
-        -->
-        
-            <mx:Form width="100%" defaultButton="{shoutSubmit}">
-	            <mx:HBox width="100%">
-	            <mx:Label text="Shout" />
-	            <mx:TextInput id="shoutText"  width="100%"/>
-	            <mx:SWFLoader visible="false" includeInLayout="false" id="shoutLoadingIndicator" source="@Embed(source='assets/swf/foursquare_loader.swf')" width="16" height="16" autoLoad="true"/>
-	            <mx:Button label="Holler" id="shoutSubmit" click="handleShout();"  cornerRadius="3" fillAlphas="[1.0, 1.0]" fillColors="[#B1CD45, #9CB92E]" color="#FFFFFF" borderColor="#698109" fontSize="12"/>
-	            </mx:HBox>
-            </mx:Form>
-        
+        <mx:Form width="100%" defaultButton="{shoutSubmit}">
+            <mx:HBox width="100%">
+            <mx:Label text="Shout" />
+            <mx:TextInput id="shoutText"  width="100%"/>
+            <mx:SWFLoader visible="false" includeInLayout="false" id="shoutLoadingIndicator" source="@Embed(source='assets/swf/foursquare_loader.swf')" width="16" height="16" autoLoad="true"/>
+            <mx:Button label="Holler" id="shoutSubmit" click="handleShout();"  cornerRadius="3" fillAlphas="[1.0, 1.0]" fillColors="[#B1CD45, #9CB92E]" color="#FFFFFF" borderColor="#698109" fontSize="12"/>
+            </mx:HBox>
+        </mx:Form>
     </mx:VBox>
 </mx:WindowedApplication>
